@@ -25,10 +25,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-  implementation 'org.springframework.boot:spring-boot-starter-security'
-  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-  
+	// JAXB API
+	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
+	// JAXB 구현체
+	implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
@@ -43,6 +46,12 @@ dependencies {
 	implementation("com.sun.xml.bind:jaxb-core:4.0.1")
 	implementation("javax.xml.bind:jaxb-api:2.4.0-b180830.0359")
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
+}
+tasks.withType(JavaExec) {
+	jvmArgs += [
+			'--add-modules', 'java.xml.bind',
+			'--add-exports', 'java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED'
+	]
 }
 
 tasks.named('test') {
